# python-template

./: main.py  pyproject.toml
.github/workflows/: lint.yml  test.yml  type-coverage.yml
scripts/: setup.sh
src/dto/: user.py
tests/unit/: user.py
